Fix Scheduler viewspicker z-index

--- a/styles/web/common/scheduler.less
+++ b/styles/web/common/scheduler.less
@@ -977,7 +977,7 @@ div[name="recurrenceRule"] > .k-dropdown
             position: absolute;
             right: 6px;
             top: 6px;
-            z-index: 10003;
+            z-index: 10000;
         }
         
         .k-rtl .k-scheduler-toolbar > ul.k-scheduler-views {
